--- a/package.json
+++ b/package.json
@@ -53,8 +53,12 @@
     "babel-eslint": "^7.0.0",
     "eslint": "^2.7.0",
     "eslint-config-rackt": "^1.1.1",
+    "expo-module-scripts": "^2.0.0",
     "jest": "^25.2.6",
     "react": "16.11.0",
     "react-native": "^0.62.0"
+  },
+  "dependencies": {
+    "@expo/config-plugins": "^3.0.3"
   }
 }
